<resources>
    <string name="app_name">Al-Quran</string>

    <string name="shortQuran">মুসলমানদের পবিত্র গ্রন্থ আল-কুরআন, পবিত্র একটি সময়কাল ধরে নবী হযরত মুহাম্মদ (সাঃ)
        এর কাছে আল্লাহর প্রত্যাদেশের সংকলন। ২৩ বছর। কুরআনকে আল-ফুরকান (যা সত্য ও মিথ্যার মধ্যে পার্থক্য করে),
        আল-কিতাব (বই) এবং আধ-ধিকর (স্মরণ) নামেও পরিচিত। আনুষ্ঠানিক বক্তব্যে কুরআনকে কুরআন মজিদ, মহিমান্বিত
        কুরআন হিসাবে উল্লেখ করা হয়। তেলাওয়াত সহজ করার জন্য কুরআনকে সমান দৈর্ঘ্যের 30টি বিভাগে বিভক্ত করা হয়েছে।
        সব মিলিয়ে কুরআনে 114টি সূরা (অধ্যায়), 7টি মঞ্জিল (স্টপ), 16টি সিজদা (সিজদা) এবং 6,666টি আয়াত (আয়াত) রয়েছে।
        কুরআনের আয়াতের সংখ্যা নিয়েও মতভেদ রয়েছে। ছন্দ ও চিত্রকল্পের ব্যবহারে কুরআনের অনেক আয়াত কাব্যিক,
        অন্যগুলোতে গদ্যের মসৃণ প্রবাহ ও গভীরতা রয়েছে। আল্লাহর নাযিলকৃত বাণী হিসাবে, কুরআনকে কেবলমাত্র পবিত্র অবস্থায় স্পর্শ ও পরিচালনা
        করতে হবে।
    </string>
    <string name="shortQuran2">
        ৬১০ খ্রিস্টাব্দের দিকে কুরআন নাযিল শুরু হয়, যখন নবী (সাঃ) হেরা পাহাড়ের একটি গুহায় ধ্যানে নিযুক্ত ছিলেন। রমজানের শেষ কয়েক
        রাতে (লাইলাতুল কদর) ফেরেশতা জিবরাঈল নবী (সাঃ)-এর সামনে হাজির হন এবং তাঁকে পড়তে বলেন। এই লাইনগুলি সূরা ৯৬ এর প্রথম আয়াত
        গঠন করে। কিছু সূরা মক্কায় এবং কিছু মদিনায় অবতীর্ণ হয়েছিল। মক্কায় অবতীর্ণ সূরাগুলো, রাসূলুল্লাহ (সাঃ)-এর মদীনায় হিজরত করার আগে,
        সেগুলিকে মক্কী বলা হয় এবং তাঁর হিজরতের পর মদীনায় অবতীর্ণ সূরাগুলো মাদানী নামে পরিচিত। মক্কী সূরাগুলো আল্লাহর অস্তিত্ব, একত্ব, কুরআনের
        সত্যতা, বিচারের দিন, পুনরুত্থান, পাপ ও পুণ্যের শাস্তি ও পুরস্কার,জান্নাত ও জাহান্নাম এবং নৈতিক শিক্ষার কথা বলে। মাদানী সূরাগুলো বেশিরভাগ
        ধর্মীয় আচার-অনুষ্ঠান, বিভিন্ন নিয়ম-কানুন বর্ণনা করে।
    </string>
    <string name="shortQuran3">
        নবী (সাঃ)-এর জীবদ্দশায় কোরান সংকলিত হয়নি, কারণ ৬৩২ খ্রিস্টাব্দ পর্যন্ত অহীগুলি অব্যাহত ছিল, সর্বশেষ ওহীটি
        বিদায় তীর্থযাত্রা-এর সময় খুতবার অংশ ছিল; নবী (সাঃ) এর কয়েক মাস আগে। মৃত্যু উদ্ঘাটনগুলি চামড়া, প্যাপিরাস,
        পাথর এবং পাতায় গৃহীত হয়েছিল বলে লেখা হয়েছিল, তবে বেশিরভাগই স্মৃতিতে প্রতিশ্রুতিবদ্ধ ছিল। যারা কুরআন মুখস্থ
        করতেন তারা হাফিজ নামে পরিচিত। ইয়ামামার যুদ্ধে বেশ কয়েকজন হাফিজ নিহত হলে হযরত উমর কুরআন সংরক্ষণের
        ব্যাপারে উদ্বিগ্ন হয়ে পড়েন। তার নির্দেশে প্রথম খলিফা হজরত আবু বকর কুরআনের বিভিন্ন অংশকে একক গ্রন্থে একত্রিত
        করার পদক্ষেপ নেন। হজরত আবু বকরের মৃত্যুর পর, হজরত ওমর, বর্তমানে খলিফা, কুরআন সংরক্ষণের দায়িত্ব নেন।
        যাইহোক, তৃতীয় খলিফা হজরত উসমান (রা.)-এর সময়েই নির্দিষ্ট পাঠের কপি তৈরি করে বিশ্বের বিভিন্ন প্রান্তে পাঠানো হয়েছিল।
        এ কারণেই হজরত উসমানকে কুরআনের সংকলক (জামিউল কুরআন) হিসেবে গণ্য করা হয়।
    </string>
    <string name="shortQuran4">
        কুরআনের সবচেয়ে গুরুত্বপূর্ণ শিক্ষা হল তাওহিদ, আল্লাহর একত্ব এবং বিচার দিবসে বিশ্বাস। কুরআন মানুষের মধ্যে সাম্য,
        সৌহার্দ্য ও ভ্রাতৃত্বের উপর জোর দেয়। অন্যান্য ধর্মের প্রতিও এর উদার দৃষ্টিভঙ্গি রয়েছে। এটি ঘোষণা করে যে, পৃথিবীর কোনো
        দলই আল্লাহর অনুগ্রহ থেকে বাদ নেই এবং আল্লাহ সমস্ত মানুষের হেদায়েতের জন্য নবী ও রসূল পাঠিয়েছেন। কুরআনের একটি
        গুরুত্বপূর্ণ দিক হল ঐতিহাসিক ঘটনার বর্ণনা। এই বর্ণনাগুলো সত্য ও মিথ্যার দ্বন্দ্বের পাশাপাশি আল্লাহর অনুসারী ও তাদের শত্রুদের
        দ্বন্দ্বের উপর আলোকপাত করে। কুরআনে এমন কিছু নবীর বর্ণনাও রয়েছে যা আল্লাহ মানুষের হেদায়েতের জন্য পাঠিয়েছিলেন।
        কুরআন এইভাবে হজরত আদম, হজরত নূহ , হজরত ইব্রাহিম , হজরত মুসা ইত্যাদির কাহিনী অন্তর্ভুক্ত করে।
    </string>
    <string name="shortQuran5">
        কুরআন ইসলামের প্রাথমিক মতবাদের উৎস। এটি হাদিস [রাসূল (সাঃ) এর বাণী] এবং সুন্নাহ বা রাসূল (সাঃ)
        এর অনুশাসন অনুসরণ করে। এটিও বিশ্বাস করা হয় যে মূল আরবীতে কুরআন তেলাওয়াত করা এবং শ্রবণ করা
        পাঠক এবং শ্রোতা উভয়ের জন্যই আশীর্বাদ নিয়ে আসে। যাইহোক, আল্লাহর নাযিলকৃত বাণী হিসাবে কুরআন তেলাওয়াত
        করার জন্য কিছু নিয়ম অনুসরণ করতে হবে। মুসলমানরা নামাজের সময় (নামাজ) বা চাপ ও বিপদের সময় সঠিকভাবে
        তেলাওয়াত করার জন্য কুরআনের বেশ কয়েকটি আয়াত মুখস্থ করে।
    </string>
    <string name="shortQuran6">
        কুরআন বিভিন্ন বিষয় নিয়ে আলোচনা করে। এতে তাওহিদ, ইসলামের ভিত্তি এবং সর্বশেষ ও সর্বশ্রেষ্ঠ নবী হজরত মুহাম্মদ (সা.)
        সম্পর্কে বিস্তারিত বর্ণনা রয়েছে। কুরআনের বর্ণনায় চারটি গুরুত্বপূর্ণ ক্ষেত্র হল ১. স্রষ্টা এবং সৃষ্টির মধ্যে সম্পর্ক, ২. আল্লাহ ও
        মানবজাতির মধ্যে সম্পর্ক, ৩. ব্যক্তি এবং ৪. মানুষ এবং আল্লাহর অন্যান্য সৃষ্টির মধ্যে সম্পর্ক। কুরআন মানবজাতির কল্যাণ ও
        মঙ্গলের উপর সরাসরি প্রভাব ফেলে এমন অনেক সমস্যাকে নির্দেশ করে। এর মধ্যে রয়েছে ১. মানুষের জাগতিক বিষয় এবং
        তার জীবনযাত্রার উপায়ে উন্নতি এবং তার জীবনধারা পরিচালনা করা; ২. মন ও আত্মার বিকাশের উদাহরণ সহ উপদেশ এবং
        আদর্শিক পরামর্শ; ৩. এখানে এবং পরকালে মানবজাতির কল্যাণ ও মঙ্গল সম্পর্কিত নিয়ম ও প্রবিধান; ৪. পূর্ববর্তী নবীদের
        জীবন ও কার্যকলাপের বিবরণ যাতে মানুষকে তাদের জীবন থেকে শিক্ষা নিতে এবং মানসিক দৃঢ়তা, নৈতিক শক্তি এবং সাহস
        অর্জন করতে সক্ষম করে; ৫. একটি স্বাভাবিক ও সুস্থ সামাজিক জীবন যাপনের জন্য প্রয়োজনীয় আচার ও আচারের বর্ণনা;
        ৬. সৎ ও ন্যায়পরায়ণ জীবন পরিচালনা এবং অন্যায় থেকে বিরত থাকার নির্দেশ; এবং ৭. মহাবিশ্বের সৃষ্টির রহস্য অধ্যয়ন এবং
        কলা ও বিজ্ঞান সম্পর্কে জ্ঞান অর্জনের আহ্বান।
    </string>
    <string name="shortQuran7">
        সাধারণভাবে, কুরআনের শিক্ষা সকল পুরুষের মধ্যে সাম্য, সহভাগিতা এবং ভ্রাতৃত্বের উপর জোর দিয়েছে। কুরআন অন্য সব ধর্মের প্রতি
        উদার মনোভাব প্রদর্শন করে। এটি ঘোষণা করে যে পৃথিবীর কোনো জাতি বা সৃষ্টি আল্লাহর নেয়ামত থেকে বঞ্চিত নয়। আল্লাহ প্রত্যেক
        জাতির জন্য নবী পাঠিয়েছেন তাদের পথপ্রদর্শন করার জন্য এবং তাদের কাছে আল্লাহর বাণী পৌঁছে দেওয়ার জন্য। কুরআন আল্লাহর
        পূর্বে নাযিলকৃত সকল কিতাবকে প্রমাণ করে। সুতরাং কুরআন একটি পবিত্র গ্রন্থ শুধুমাত্র একটি নির্দিষ্ট সম্প্রদায়ের জন্য নয়, বরং এটি
        সমগ্র মানবজাতির জন্য। এটি একটি সম্পূর্ণ জীবন বিধান। কুরআনের শিক্ষা অনুযায়ী জীবনযাপন করলে সকল মানুষ শান্তি ও সম্প্রীতির
        সাথে বসবাস করতে পারে এবং অন্য বিশ্বের জন্য যোগ্যতা অর্জন করতে পারে।
    </string>


</resources>